<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="job_comparison_app_title">Job Comparison</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="add_job_offer_menu_option">Add a Job Offer</string>
    <string name="update_current_job_menu_option">Update Current Job</string>
    <string name="adjust_comparison_settings_menu_option">Adjust Comparison Settings</string>
    <string name="compare_job_offers_menu_option">Compare Job Offers</string>
    <string name="add_a_job_offer_title">Add a Job Offer</string>
    <string name="compare_job_offers_title">Compare Job Offers</string>
    <string name="comparing_two_jobs_title">Comparing Two Jobs</string>
    <string name="update_current_job_title">Update Current Job</string>
    <string name="adjust_comparison_settings_title">Adjust Comparison Settings</string>
    <string name="title_input_label">Title</string>
    <string name="city_input_label">City</string>
    <string name="state_input_label">State</string>
    <string name="company_input_label">Company</string>
    <string name="cost_of_living_input_label">Cost of Living</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="yearly_salary_input_label">Yearly Salary</string>
    <string name="yearly_bonus_input_label">Yearly Bonus</string>
    <string name="retirement_0_100_input_label">Retirement (0–100)</string>
    <string name="restricted_stock_input_label">Restricted Stock (vested over 3 years)</string>
    <string name="personalized_learning_development_0_18000_input_label"><![CDATA[Personalized Learning & Development (0–18000)]]></string>
    <string name="family_planning_assistance_up_to_12_of_yearly_salary_input_label">Family Planning Assistance (up to 12% of yearly salary)</string>
    <string name="job_successfully_saved">Job successfully saved!</string>
    <string name="enter_another_offer">Enter another offer</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="compare_job_offers">Compare Job Offers</string>
    <string name="salary_wight_lable">Yearly salary weight</string>
    <string name="bonus_weight_lable">Yearly bonus weight</string>
    <string name="retirement_weight_lable">Retirement weight</string>
    <string name="stock_witght_lable">Restricted stock weight</string>
    <string name="learning_dev_weight_lable">Personalized learning &amp; development weight</string>
    <string name="family_planning_weight_lable">Family planning assistance weight</string>
    <string name="location_row_header">Location</string>
    <string name="ays_row_header">AYS</string>
    <string name="ayb_row_header">AYB</string>
    <string name="retirement_row_header">Retirement</string>
    <string name="restricted_stock_unit_rsua_row_header">Restricted Stock Unit</string>
    <string name="personalized_learning_and_development_row_header">Personalized Learning &amp; Development</string>
    <string name="family_planning_assistance_row_header">Family Planning Assistance</string>
    <string name="job1">Job1</string>
    <string name="job2">Job2</string>
</resources>