<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF6FF"
    tools:context=".controller.MainMenu"
    android:id="@+id/main">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/job_comparison_app_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:background="@color/header_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_main_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="16dp"
        android:text="@string/main_menu_title"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cornerRadius="8dp"
        android:clickable="false"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/btn_update_current_job"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/light_purple"
        android:padding="12dp"
        android:text="@string/update_current_job_menu_option"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_main_menu" />

    <Button
        android:id="@+id/btn_add_job_offer"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/light_purple"
        android:padding="12dp"
        android:text="@string/add_job_offer_menu_option"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update_current_job" />

    <Button
        android:id="@+id/btn_adjust_comparison_settings"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:padding="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/adjust_comparison_settings_menu_option"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/light_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_job_offer" />

    <Button
        android:id="@+id/btn_compare_job_offers"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:padding="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/compare_job_offers_menu_option"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/light_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_adjust_comparison_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>
